Update specific files and images directory

--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
         </p>
         <p>
           If you prefer, you can also contact us directly at
-          <a href="mailto:jody@bubblesandfur.com" class="nav-link"
+          <a href="mailto:jody@bubblesandfur.com" class="nav-link text-danger"
             >jody@bubblesandfur.com</a
           >.
         </p>
