--- a/pay.html
+++ b/pay.html
@@ -1,15 +1,224 @@
-<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta http-equiv=X-UA-Compatible contemt="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><title>Pricing - Bubbles & Fur</title><meta name=description content="View the pricing for Bubbles & Fur's cleaning services. We offer competitive rates for deep cleaning, maintenance cleaning, pet care, carpet cleaning, and more in Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro, and surrounding areas in Indiana."><meta name=keywords content="pricing, Bubbles & Fur, cleaning services, cost, deep cleaning, maintenance cleaning, pet care, carpet cleaning, Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro"><meta name=robots content="index, follow"><meta property=og:title content="Pricing - Bubbles & Fur - Cleaning Services in Indiana"><meta property=og:description content="Check out the pricing for Bubbles & Fur's cleaning services. We offer transparent rates for a variety of cleaning services in Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro, and surrounding areas."><meta property=og:image content=https://www.bubblesandfur.com/images/bubbles_logo.jpg><meta property=og:url content=https://www.bubblesandfur.com/pricing.html><meta property=og:type content=website><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel=stylesheet><link rel=stylesheet href=css/fontawesome.css><link rel=stylesheet href=css/bootstrap.css><link rel=stylesheet href=css/styles.css></head><body><div class="navbar navbar-expand-lg fixed-top navbar-dark p-1"><div class=container-fluid><a href=images/bubbles_logo.jpg class=navbar-brand><img src=images/bubbles_logo.jpg alt="Bubbles & Fur Logo" class=img-fluid style="max-width: 150px"> </a><button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarNavDropdown><span class=navbar-toggler-icon></span></button><div class="collapse navbar-collapse" id=navbarNavDropdown><ul class="navbar-nav ms-auto pt-2 pe-4"><li class=nav-item><a href=index.html class=nav-link>Home</a></li><li class=nav-item><a href=index.html#services class=nav-link>Services</a></li><li class=nav-item><a href=index.html#need class=nav-link>Time of Need</a></li><li class=nav-item><a href=about.html class=nav-link>About</a></li><li class=nav-item><a href=contact.html class=nav-link>Contact</a></li><li class=nav-item><a href=pay.html class=nav-link>Pay</a></li></ul></div></div></div><div class="container-fluid p-0 pt-7"><div class="row no-gutters"><div class="col-lg-8 d-none d-lg-block p-2"><img src=./images/cleaning_6.jpg alt="washing counter" class="img-fluid rounded-3" style="height: 85vh; width: 100%; object-fit: cover"></div><div class="col-lg-4 d-flex justify-content-center p-3"><div class="p-4 pb-1 text-center rounded-3 bg-light" style="max-width: 90%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)"><h1>Pay Your Invoice</h1><script src="https://www.paypal.com/sdk/js?client-id=BAAJbL9Yq0yuOEL3q4Ccc6i_2GHsMYjOtSi3rT_T59Li32IMAcDDuLfxc8uA5A0sfDhgNPIR2rDAezgh40&components=hosted-buttons&enable-funding=venmo&currency=USD"></script><div id=paypal-container-CEQG9L4S7ZTPW class=text-center></div><script>paypal
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" contemt="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pricing - Bubbles & Fur</title>
+
+    <meta
+      name="description"
+      content="View the pricing for Bubbles & Fur's cleaning services. We offer competitive rates for deep cleaning, maintenance cleaning, pet care, carpet cleaning, and more in Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro, and surrounding areas in Indiana."
+    />
+    <meta
+      name="keywords"
+      content="pricing, Bubbles & Fur, cleaning services, cost, deep cleaning, maintenance cleaning, pet care, carpet cleaning, Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta
+      property="og:title"
+      content="Pricing - Bubbles & Fur - Cleaning Services in Indiana"
+    />
+    <meta
+      property="og:description"
+      content="Check out the pricing for Bubbles & Fur's cleaning services. We offer transparent rates for a variety of cleaning services in Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro, and surrounding areas."
+    />
+    <meta
+      property="og:image"
+      content="https://www.bubblesandfur.com/images/bubbles_logo.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://www.bubblesandfur.com/pricing.html"
+    />
+    <meta property="og:type" content="website" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/fontawesome.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <!-- Navigation -->
+    <div class="navbar navbar-expand-lg fixed-top navbar-dark p-1">
+      <div class="container-fluid">
+        <a href="images/bubbles_logo.jpg" class="navbar-brand">
+          <img
+            src="images/bubbles_logo.jpg"
+            alt="Bubbles & Fur Logo"
+            class="img-fluid"
+            style="max-width: 150px"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto pt-2 pe-4">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="index.html#services" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="index.html#need" class="nav-link">Time of Need</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="pay.html" class="nav-link">Pay</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Payment -->
+    <div class="container-fluid p-0 pt-7 pb-3">
+      <div class="row no-gutters align-items-center" style="height: 100vh">
+        <!-- Left Image Column -->
+        <div
+          class="col-lg-8 d-none d-lg-flex align-items-center justify-content-center p-2"
+        >
+          <img
+            src="./images/cleaning_6.jpg"
+            alt="washing counter"
+            class="img-fluid rounded-3"
+            style="height: 100vh; width: 100%; object-fit: cover"
+          />
+        </div>
+
+        <!-- Right Payment Column -->
+        <div class="col-lg-4 d-flex flex-column align-items-center p-3">
+          <!-- PayPal Section -->
+          <div
+            class="p-4 pb-1 text-center rounded-3 bg-light"
+            style="max-width: 90%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)"
+          >
+            <h1>Pay Your Invoice</h1>
+            <script src="https://www.paypal.com/sdk/js?client-id=BAAJbL9Yq0yuOEL3q4Ccc6i_2GHsMYjOtSi3rT_T59Li32IMAcDDuLfxc8uA5A0sfDhgNPIR2rDAezgh40&components=hosted-buttons&enable-funding=venmo&currency=USD"></script>
+            <div id="paypal-container-CEQG9L4S7ZTPW" class="text-center"></div>
+            <script>
+              paypal
                 .HostedButtons({
                   hostedButtonId: "CEQG9L4S7ZTPW",
                 })
-                .render("#paypal-container-CEQG9L4S7ZTPW");</script></div></div></div></div><footer class="container-fluid bg-info text-white py-4"><div class=container><div class="row text-center"><div class="col-md-6 mb-3 mb-md-0 text-md-start"><h5>Bubbles & Fur</h5><p class=mb-1>Nashville, IN</p></div><div class="col-md-6 gap-3 d-flex align-items-center justify-content-center justify-content-md-end"><a href=tel:+8123403698 class="text-white text-center fs-3 ms-2 me-2" aria-label=Phone><i class="fa-solid fa-phone"></i> </a><a href=mailto:jody@bubblesandfur.com class="text-white fs-3 ms-2 me-2" aria-label=Email><i class="fa-solid fa-envelope"></i> </a><a href="https://www.facebook.com/profile.php?id=61565076586589&mibextid=LQQJ4d" class="text-white fs-3 ms-2 me-2" target=_blank aria-label=Facebook><i class="fab fa-facebook"></i></a></div></div><hr class=my-3><div class="row text-center"><div class=col-12><p class="small mb-0 fst-italic text-center">"Put on then, as God's chosen ones, holy and beloved, compassionate hearts, kindness, humility, meekness, and patience, bearing with one another and, if one has a complaint against another, forgiving each other; as the Lord has forgiven you, so you also must forgive."</p><p class="small fw-bold mb-0 text-center">Colossians 3:12-13 (ESV)</p></div></div><div class="row text-center"><div class="col-12 mt-3"><p class=mb-0>&copy; 2024 Bubbles & Fur. All Rights Reserved.</p></div></div></div></footer><script src=js/bootstrap.bundle.min.js></script><script src=js/script.js></script><script>if (!sessionStorage.getItem("visitedHomePage")) {
+                .render("#paypal-container-CEQG9L4S7ZTPW");
+            </script>
+          </div>
+
+          <!-- Venmo Section -->
+          <div
+            class="p-4 mt-3 text-center rounded-3 bg-light"
+            style="max-width: 310px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)"
+          >
+            <p class="mt-3">
+              To pay directly via Venmo, please
+              <a
+                class="text-danger"
+                href="https://venmo.com/u/your-venmo-username"
+                target="_blank"
+                >click here</a
+              >
+              or use the Venmo app and search for
+              <strong>@bubblesandfur</strong>.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--Footer-->
+    <footer class="container-fluid bg-info text-white py-4">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-6 mb-3 mb-md-0 text-md-start">
+            <h5>Bubbles & Fur</h5>
+
+            <p class="mb-1">Nashville, IN</p>
+          </div>
+
+          <div
+            class="col-md-6 gap-3 d-flex align-items-center justify-content-center justify-content-md-end"
+          >
+            <a
+              href="tel:+8123403698"
+              class="text-white text-center fs-3 ms-2 me-2"
+              aria-label="Phone"
+            >
+              <i class="fa-solid fa-phone"></i>
+            </a>
+            <a
+              href="mailto:jody@bubblesandfur.com"
+              class="text-white fs-3 ms-2 me-2"
+              aria-label="Email"
+            >
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+            <a
+              href="https://www.facebook.com/profile.php?id=61565076586589&mibextid=LQQJ4d"
+              class="text-white fs-3 ms-2 me-2"
+              target="_blank"
+              aria-label="Facebook"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+          </div>
+        </div>
+
+        <hr class="my-3" />
+
+        <div class="row text-center">
+          <div class="col-12">
+            <p class="small mb-0 fst-italic text-center">
+              "Put on then, as God's chosen ones, holy and beloved,
+              compassionate hearts, kindness, humility, meekness, and patience,
+              bearing with one another and, if one has a complaint against
+              another, forgiving each other; as the Lord has forgiven you, so
+              you also must forgive."
+            </p>
+            <p class="small fw-bold mb-0 text-center">
+              Colossians 3:12-13 (ESV)
+            </p>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-12 mt-3">
+            <p class="mb-0">&copy; 2024 Bubbles & Fur. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
+    <script>
+      if (!sessionStorage.getItem("visitedHomePage")) {
         AOS.init();
         sessionStorage.setItem("visitedHomePage", "true");
       } else {
         document.querySelectorAll("[data-aos]").forEach(function (element) {
           element.removeAttribute("data-aos");
         });
-      }</script><script>function getQueryParam(param) {
+      }
+    </script>
+    <script>
+      function getQueryParam(param) {
         const urlParams = new URLSearchParams(window.location.search);
         return urlParams.get(param);
       }
@@ -23,4 +232,7 @@
             messageBox.value = `I want to schedule a ${service}!`;
           }
         }
-      };</script></body></html>
+      };
+    </script>
+  </body>
+</html>
