--- a/pay.html
+++ b/pay.html
@@ -87,7 +87,7 @@
         </div>
       </div>
     </div>
-
+    <!--this is a test of the emergency broadcast system-->
     <!-- Payment -->
     <div class="container-fluid p-0 pt-7 pb-3">
       <div class="row no-gutters align-items-center" style="height: 100vh">
