--- a/contact.html
+++ b/contact.html
@@ -1,251 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" contemt="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - Bubbles & Fur</title>
-
-    <meta
-      name="description"
-      content="Get in touch with Bubbles & Fur for all your cleaning needs across Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro, and surrounding areas in Indiana. Use our contact form or call us to schedule a service or ask any questions."
-    />
-    <meta
-      name="keywords"
-      content="contact us, Bubbles & Fur, cleaning services, customer service, get in touch, Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro"
-    />
-    <meta name="robots" content="index, follow" />
-    <meta
-      property="og:title"
-      content="Contact Us - Bubbles & Fur - Cleaning Services in Nashville, IN"
-    />
-    <meta
-      property="og:description"
-      content="Contact Bubbles & Fur for your cleaning needs in Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro, and surrounding areas. Use our contact form or call us to schedule a service or ask any questions."
-    />
-    <meta
-      property="og:image"
-      content="https://www.bubblesandfur.com/images/bubbles_logo.jpg"
-    />
-    <meta
-      property="og:url"
-      content="https://www.bubblesandfur.com/contact.html"
-    />
-    <meta property="og:type" content="website" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/fontawesome.css" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    />
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-  </head>
-  <body>
-    <!-- Navigation -->
-    <div class="navbar navbar-expand-lg fixed-top navbar-dark p-1">
-      <div class="container-fluid">
-        <a href="images/bubbles_logo.jpg" class="navbar-brand">
-          <img
-            src="images/bubbles_logo.jpg"
-            alt="Bubbles & Fur Logo"
-            class="img-fluid"
-            style="max-width: 150px"
-          />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ms-auto pt-2 pe-4">
-            <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="index.html#services" class="nav-link">Services</a>
-            </li>
-            <li class="nav-item">
-              <a href="index.html#need" class="nav-link">Time of Need</a>
-            </li>
-            <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a href="pay.html" class="nav-link">Pay</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <!-- Form -->
-    <div class="container my-5 p-0 mt-7" style="max-width: 600px">
-      <div class="p-5 text-center rounded-3 bg-light">
-        <h1 class="text-body-emphasis header-title">
-          Schedule Your Service Now!
-        </h1>
-        <p>
-          Let us know the service you're interested in and the best way to reach
-          you. Can't decide on a service? Schedule a free walkthrough instead!
-          We promise to respond to all customer inquiries within 24 hours.
-        </p>
-        <p>
-          If you prefer, you can also contact us directly at
-          <a href="mailto:jody@bubblesandfur.com" class="nav-link text-danger"
-            >jody@bubblesandfur.com</a
-          >.
-        </p>
-        <form
-          name="contact"
-          method="POST"
-          data-netlify="true"
-          netlify-honeypot="bot-field"
-          data-netlify-recaptcha="true"
-          netlify
-        >
-          <input type="hidden" name="form-name" value="contact" />
-          <p class="visually-hidden">
-            <label>
-              Don’t fill this out if you’re human: <input name="bot-field" />
-            </label>
-          </p>
-          <div class="form-group fw-bold py-1">
-            <label for="name" class="py-1">Name:</label>
-            <input
-              type="text"
-              class="form-control"
-              id="name"
-              name="name"
-              placeholder="Name"
-              required
-            />
-          </div>
-          <div class="form-group fw-bold py-1">
-            <label for="email" class="py-1">Email:</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              name="email"
-              placeholder="Email Address"
-              required
-            />
-          </div>
-          <div class="form-group fw-bold py-3">
-            <label for="message" class="py-1">Message:</label>
-            <textarea
-              id="message"
-              class="form-control"
-              name="message"
-              placeholder="Type your message here"
-              required
-            ></textarea>
-          </div>
-          <div class="py-3" data-netlify-recaptcha="true"></div>
-          <p>
-            <button type="submit" class="btn btn-danger text-white mt-4">
-              Submit
-            </button>
-          </p>
-        </form>
-      </div>
-    </div>
-
-    <!--map-->
-    <div class="container-fluid bg-light py-5">
-      <div class="container">
-        <h2 class="pb-2 border-bottom">Our Service Area</h2>
-        <p>
-          We are proud to serve the greater Indianapolis area. The map below
-          illustrates our service radius. If you are located outside of this
-          radius, we encourage you to still reach out, but additional mileage
-          charges may apply.
-        </p>
-
-        <!-- Map Container -->
-        <div id="map"></div>
-      </div>
-    </div>
-    <!--Footer-->
-    <footer class="container-fluid bg-info text-white py-4">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-md-6 mb-3 mb-md-0 text-md-start">
-            <h5>Bubbles & Fur</h5>
-
-            <p class="mb-1">Nashville, IN</p>
-          </div>
-
-          <div
-            class="col-md-6 gap-3 d-flex align-items-center justify-content-center justify-content-md-end"
-          >
-            <a
-              href="tel:+8123403698"
-              class="text-white text-center fs-3 ms-2 me-2"
-              aria-label="Phone"
-            >
-              <i class="fa-solid fa-phone"></i>
-            </a>
-            <a
-              href="mailto:jody@bubblesandfur.com"
-              class="text-white fs-3 ms-2 me-2"
-              aria-label="Email"
-            >
-              <i class="fa-solid fa-envelope"></i>
-            </a>
-            <a
-              href="https://www.facebook.com/profile.php?id=61565076586589&mibextid=LQQJ4d"
-              class="text-white fs-3 ms-2 me-2"
-              target="_blank"
-              aria-label="Facebook"
-            >
-              <i class="fab fa-facebook"></i>
-            </a>
-          </div>
-        </div>
-
-        <hr class="my-3" />
-
-        <div class="row text-center">
-          <div class="col-12">
-            <p class="small mb-0 fst-italic text-center">
-              "Put on then, as God's chosen ones, holy and beloved,
-              compassionate hearts, kindness, humility, meekness, and patience,
-              bearing with one another and, if one has a complaint against
-              another, forgiving each other; as the Lord has forgiven you, so
-              you also must forgive."
-            </p>
-            <p class="small fw-bold mb-0 text-center">
-              Colossians 3:12-13 (ESV)
-            </p>
-          </div>
-        </div>
-        <div class="row text-center">
-          <div class="col-12 mt-3">
-            <p class="mb-0">&copy; 2024 Bubbles & Fur. All Rights Reserved.</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
-    <script>
-      function getQueryParam(param) {
+<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta http-equiv=X-UA-Compatible contemt="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><title>Contact Us - Bubbles & Fur</title><meta name=description content="Get in touch with Bubbles & Fur for all your cleaning needs across Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro, and surrounding areas in Indiana. Use our contact form or call us to schedule a service or ask any questions."><meta name=keywords content="contact us, Bubbles & Fur, cleaning services, customer service, get in touch, Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro"><meta name=robots content="index, follow"><meta property=og:title content="Contact Us - Bubbles & Fur - Cleaning Services in Nashville, IN"><meta property=og:description content="Contact Bubbles & Fur for your cleaning needs in Trafalgar, Westfield, Danville, Greenfield, Lizton, Pittsboro, and surrounding areas. Use our contact form or call us to schedule a service or ask any questions."><meta property=og:image content=https://www.bubblesandfur.com/images/bubbles_logo.jpg><meta property=og:url content=https://www.bubblesandfur.com/contact.html><meta property=og:type content=website><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel=stylesheet><link rel=stylesheet href=css/fontawesome.css><link rel=stylesheet href=css/bootstrap.css><link rel=stylesheet href=css/styles.css><link rel=stylesheet href=https://unpkg.com/leaflet@1.7.1/dist/leaflet.css><script src=https://unpkg.com/leaflet@1.7.1/dist/leaflet.js></script></head><body><div class="navbar navbar-expand-lg fixed-top navbar-dark p-1"><div class=container-fluid><a href=images/bubbles_logo.jpg class=navbar-brand><img src=images/bubbles_logo.jpg alt="Bubbles & Fur Logo" class=img-fluid style="max-width: 150px"> </a><button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarNavDropdown><span class=navbar-toggler-icon></span></button><div class="collapse navbar-collapse" id=navbarNavDropdown><ul class="navbar-nav ms-auto pt-2 pe-4"><li class=nav-item><a href=index.html class=nav-link>Home</a></li><li class=nav-item><a href=index.html#services class=nav-link>Services</a></li><li class=nav-item><a href=index.html#need class=nav-link>Time of Need</a></li><li class=nav-item><a href=about.html class=nav-link>About</a></li><li class=nav-item><a href=contact.html class=nav-link>Contact</a></li><li class=nav-item><a href=pay.html class=nav-link>Pay</a></li></ul></div></div></div><div class="container my-5 p-0 mt-7" style="max-width: 600px"><div class="p-5 text-center rounded-3 bg-light"><h1 class="text-body-emphasis header-title">Schedule Your Service Now!</h1><p>Let us know the service you're interested in and the best way to reach you. Can't decide on a service? Schedule a free walkthrough instead! We promise to respond to all customer inquiries within 24 hours.</p><p>If you prefer, you can also contact us directly at <a href=mailto:jody@bubblesandfur.com class="nav-link text-danger">jody@bubblesandfur.com</a>.</p><form name=contact method=POST data-netlify=true netlify-honeypot=bot-field data-netlify-recaptcha=true netlify><input type=hidden name=form-name value=contact><p class=visually-hidden><label>Don’t fill this out if you’re human: <input name=bot-field></label></p><div class="form-group fw-bold py-1"><label for=name class=py-1>Name:</label> <input type=text class=form-control id=name name=name placeholder=Name required></div><div class="form-group fw-bold py-1"><label for=email class=py-1>Email:</label> <input type=email class=form-control id=email name=email placeholder="Email Address" required></div><div class="form-group fw-bold py-3"><label for=message class=py-1>Message:</label> <textarea id=message class=form-control name=message placeholder="Type your message here" required></textarea></div><div class=py-3 data-netlify-recaptcha=true></div><p><button type=submit class="btn btn-danger text-white mt-4">Submit</button></p></form></div></div><div class="container-fluid bg-light py-5"><div class=container><h2 class="pb-2 border-bottom">Our Service Area</h2><p>We are proud to serve the greater Indianapolis area. The map below illustrates our service radius. If you are located outside of this radius, we encourage you to still reach out, but additional mileage charges may apply.</p><div id=map></div></div></div><footer class="container-fluid bg-info text-white py-4"><div class=container><div class="row text-center"><div class="col-md-6 mb-3 mb-md-0 text-md-start"><h5>Bubbles & Fur</h5><p class=mb-1>Nashville, IN</p></div><div class="col-md-6 gap-3 d-flex align-items-center justify-content-center justify-content-md-end"><a href=tel:+8123403698 class="text-white text-center fs-3 ms-2 me-2" aria-label=Phone><i class="fa-solid fa-phone"></i> </a><a href=mailto:jody@bubblesandfur.com class="text-white fs-3 ms-2 me-2" aria-label=Email><i class="fa-solid fa-envelope"></i> </a><a href="https://www.facebook.com/profile.php?id=61565076586589&mibextid=LQQJ4d" class="text-white fs-3 ms-2 me-2" target=_blank aria-label=Facebook><i class="fab fa-facebook"></i></a></div></div><hr class=my-3><div class="row text-center"><div class=col-12><p class="small mb-0 fst-italic text-center">"Put on then, as God's chosen ones, holy and beloved, compassionate hearts, kindness, humility, meekness, and patience, bearing with one another and, if one has a complaint against another, forgiving each other; as the Lord has forgiven you, so you also must forgive."</p><p class="small fw-bold mb-0 text-center">Colossians 3:12-13 (ESV)</p></div></div><div class="row text-center"><div class="col-12 mt-3"><p class=mb-0>&copy; 2024 Bubbles & Fur. All Rights Reserved.</p></div></div></div></footer><script src=js/bootstrap.bundle.min.js></script><script src=js/script.js></script><script>function getQueryParam(param) {
         const urlParams = new URLSearchParams(window.location.search);
         return urlParams.get(param);
       }
@@ -259,10 +12,7 @@
             messageBox.value = `I want to schedule a ${service}!`;
           }
         }
-      };
-    </script>
-    <script>
-      var map = L.map("map").setView([39.55, -86.1581], 9);
+      };</script><script>var map = L.map("map").setView([39.55, -86.1581], 9);
 
       L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
         attribution:
@@ -274,7 +24,4 @@
         fillColor: "#e4f5e8",
         fillOpacity: 0.5,
         radius: 53000,
-      }).addTo(map);
-    </script>
-  </body>
-</html>
+      }).addTo(map);</script></body></html>
