--- a/pay.html
+++ b/pay.html
@@ -88,7 +88,7 @@
       </div>
     </div>
     
-    <!-- Payment Section-->
+    <!-- Payment-->
     <div class="container-fluid p-0 pt-7 pb-3">
       <div class="row no-gutters align-items-center" style="height: 100vh">
         <!-- Left Image Column -->
