--- a/pay.html
+++ b/pay.html
@@ -87,25 +87,19 @@
         </div>
       </div>
     </div>
-    
+
     <!-- Payment -->
-    <div class="container-fluid p-0 pt-7 pb-3">
-      <div class="row no-gutters align-items-center" style="height: 100vh">
-        <!-- Left Image Column -->
-        <div
-          class="col-lg-8 d-none d-lg-flex align-items-center justify-content-center p-2"
-        >
+    <div class="container-fluid p-0 pt-7">
+      <div class="row no-gutters">
+        <div class="col-lg-8 d-none d-lg-block p-2">
           <img
             src="./images/cleaning_6.jpg"
             alt="washing counter"
             class="img-fluid rounded-3"
-            style="height: 100vh; width: 100%; object-fit: cover"
+            style="height: 85vh; width: 100%; object-fit: cover"
           />
         </div>
-
-        <!-- Right Payment Column -->
-        <div class="col-lg-4 d-flex flex-column align-items-center p-3">
-          <!-- PayPal Section -->
+        <div class="col-lg-4 d-flex justify-content-center p-3">
           <div
             class="p-4 pb-1 text-center rounded-3 bg-light"
             style="max-width: 90%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)"
@@ -120,24 +114,6 @@
                 })
                 .render("#paypal-container-CEQG9L4S7ZTPW");
             </script>
-          </div>
-
-          <!-- Venmo Section -->
-          <div
-            class="p-4 mt-3 text-center rounded-3 bg-light"
-            style="max-width: 310px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)"
-          >
-            <p class="mt-3">
-              To pay directly via Venmo, please
-              <a
-                class="text-danger"
-                href="https://venmo.com/u/your-venmo-username"
-                target="_blank"
-                >click here</a
-              >
-              or use the Venmo app and search for
-              <strong>@bubblesandfur</strong>.
-            </p>
           </div>
         </div>
       </div>
