--- a/pay.html
+++ b/pay.html
@@ -91,7 +91,7 @@
     
     <!-- Payment -->
     <div class="container-fluid p-0 pt-7 pb-3">
-      <div class="row no-gutters align-items-center" style="height: 100vh">
+      <div class="row no-gutters align-items-center" style="min-height: 100vh">
         <!-- Left Image Column -->
         <div
           class="col-lg-8 d-none d-lg-flex align-items-center justify-content-center p-2"
